build_log.txt
[ 97%] Built target Catch2
[ 98%] Built target Catch2WithMain
[100%] Building CXX object CMakeFiles/test_10_dig_t_io.dir/tests/test_10_dig_t_io.cpp.obj
In file included from D:\GDrive\NumericRepresentations_gamma\tests\test_10_dig_t_io.cpp:5:
D:/GDrive/NumericRepresentations_gamma/include/core/dig_t.hpp:3368:17: error: redefinition of 'template<long long unsigned int Base>  requires  Base > 1 std::ostream& NumRepr::operator<<(std::ostream&, dig_t<Base>)'
 3368 |   std::ostream &operator<<(std::ostream &os, dig_t<Base> arg) {
      |                 ^~~~~~~~
D:/GDrive/NumericRepresentations_gamma/include/core/dig_t.hpp:3298:17: note: 'template<long long unsigned int Base>  requires  Base > 1 std::ostream& NumRepr::operator<<(std::ostream&, dig_t<Base>)' previously declared here
 3298 |   std::ostream &operator<<(std::ostream &os, dig_t<Base> arg) {
      |                 ^~~~~~~~
mingw32-make[3]: *** [CMakeFiles\test_10_dig_t_io.dir\build.make:79: CMakeFiles/test_10_dig_t_io.dir/tests/test_10_dig_t_io.cpp.obj] Error 1
mingw32-make[2]: *** [CMakeFiles\Makefile2:527: CMakeFiles/test_10_dig_t_io.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:534: CMakeFiles/test_10_dig_t_io.dir/rule] Error 2
mingw32-make: *** [Makefile:276: test_10_dig_t_io] Error 2
